<resources>
    <string name="app_name">E-Parc</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone_number">This phone number is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_car_brand">This car brand is invalid</string>
    <string name="error_invalid_license_plate_number">This license plate is invalid</string>
    <string name="error_invalid_credit_card_number">This credit card number is invalid</string>
    <string name="error_invalid_cvv_number">This CVV number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_license_plate">License Plate</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_car_model">Car Model</string>
    <string name="prompt_credit_card_number">Credit Card Number</string>
    <string name="prompt_car_brand">Car Brand</string>
    <string name="title_activity_recommended">Recommended</string>
    <string name="title_activity_friends">Friends</string>
</resources>
